--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fastify/jwt": "^8.0.1",
     "@fastify/swagger": "^8.14.0",
     "@fastify/swagger-ui": "^3.0.0",
+    "argon2": "^0.40.3",
     "autobind-decorator": "^2.4.0",
     "axios": "^1.6.8",
     "fastify": "^4.27.0",
